Cambio de titulo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 	<head>
-		<title>Home</title>
+		<title>Agencia Holanda</title>
 			<link rel="stylesheet" type="text/css" href="css/estilo.css">
 			<title>Home</title>
 			<link rel="stylesheet" type="text/css" href="css/estilo.css">
