--- a/conocenos.html
+++ b/conocenos.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	</head>
-	<body>
+	<body> 
 		<nav>
 			<svg xmlns="http://www.w3.org/2000/svg" style="margin-top: 6px; margin-left: 20px;" width="50" height="50" fill="currentColor" class="bi bi-chevron-double-left" viewBox="0 0 16 16">
 			<path fill-rule="evenodd" d="M8.354 1.646a.5.5 0 0 1 0 .708L2.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
@@ -21,7 +21,7 @@
 			</svg><img class="logo" src="img/galeria1/banner.png" style="margin-left:510px;"><h1 id="titular" style="float: right;" href="index.html">Agencia de Viajes Holanda</h1>
 			<ul>
 			<li><img class="logo" src="img/galeria1/logo.png" id="logo" href="index.html" /></li>
-			<li><a href="index.html" title="Home">Agencia Holanda</a></li> 
+			<li><a href="index.html" title="Home">Holanda</a></li> 
 			<li><a href="conocenos.html" title="Conocenos">Conocenos</a></li>
 			<li><a href="paquetes.html" title="Paquetes">Paquetes</a></li>
 			<li><a href="recomendaciones.html" title="Recomendaciones">Recomendaciones</a></li>
